config-root/namespaces/jx-production/php/php-php-deploy.yaml
# Source: php/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-php
  labels:
    draft: draft-app
    chart: "php-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: php-php
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: php-php
    spec:
      serviceAccountName: php-php
      containers:
        - name: php
          image: "gcr.io/jenkinsx-2021/php:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
