config-root/namespaces/jx-production/php/php-ingress.yaml
# Source: php/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: php
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: php
              servicePort: 80
      host: php-jx-production.35.184.128.47.nip.io
